--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.5",
+    "gray-matter": "^4.0.2",
     "postcss": "^8.2.8",
+    "react-markdown": "^5.0.3",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.2.3"
   }
