--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ./components/** ./pages/** -c .eslintrc.json --ext .ts,.tsx .",
+    "lint:fix": "eslint ./components/** ./pages/** -c .eslintrc.json --fix --ext .ts,.tsx .",
+    "format": "prettier --write \"**/*.+(js|ts|tsx|json|sass|scss|md)\""
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "dependencies": {
     "next": "10.0.8",
@@ -16,9 +22,21 @@
   "devDependencies": {
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gray-matter": "^4.0.2",
     "postcss": "^8.2.8",
+    "prettier": "^2.2.1",
     "react-markdown": "^5.0.3",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.2.3"
