--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.8"
   },
   "devDependencies": {
