--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,49 @@
 version: 2.1
-orbs:
-  node: circleci/node@3.0.0
+
+jobs:
+  run_lint:
+    docker:
+      - image: cimg/node:15.1
+      - image: cimg/node:14.16
+    steps:
+      - checkout
+      - restore_cache:
+          # See the configuration reference documentation for more details on using restore_cache and save_cache steps
+          # https://circleci.com/docs/2.0/configuration-reference/?section=reference#save_cache
+          keys:
+            - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
+      - run:
+          name: install packages
+          command: npm ci
+      - save_cache:
+          key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
+          paths:
+            - ~/.npm
+      - run:
+          name: Run ESLint
+          command: npm run lint
+  run_build:
+    docker: 
+      - image: cimg/node:15.1
+      - image: cimg/node:14.16
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
+      - run:
+          name: install packages
+          command: npm ci
+      - save_cache:
+          key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
+          paths:
+            - ~/.npm
+      - run:
+          name: Run Production Build
+          command: npm run build
+
 workflows:
-  node-tests:
+  build_app:
     jobs:
-      - node/test
+      - run_lint
+      - run_build
