--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  sonarcloud: sonarsource/sonarcloud@1.0.1
+
 jobs:
   run_build:
     docker:
@@ -16,7 +19,7 @@ jobs:
           keys:
             - node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
       - run:
-          name: install packages
+          name: Install dependencies
           command: npm ci
       - save_cache:
           key: node-deps-v1-{{ .Branch }}-{{checksum "package-lock.json"}}
@@ -28,8 +31,10 @@ jobs:
       - run:
           name: Run Production build
           command: npm run build
+      - sonarcloud/scan
 
 workflows:
   build_app:
     jobs:
-      - run_build
+      - run_build:
+          context: SonarCloud
