--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-seo": "^4.24.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-intersection-observer": "^8.31.1",
     "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.8"
   },
