--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "next": "10.0.8",
+    "next-seo": "^4.24.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-intersection-observer": "^8.31.1",
     "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.8"
   },
