--- a/package.json
+++ b/package.json
@@ -14,34 +14,35 @@
     "extends": "react-app"
   },
   "dependencies": {
-    "next": "10.0.8",
-    "next-seo": "^4.24.0",
+    "next": "^11.0.0",
+    "next-seo": "^4.26.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-intersection-observer": "^8.31.1",
     "react-syntax-highlighter": "^15.4.3",
-    "sass": "^1.32.8"
+    "sass": "^1.35.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "autoprefixer": "^10.2.5",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "autoprefixer": "^10.3.1",
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.4.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gray-matter": "^4.0.2",
+    "gray-matter": "^4.0.3",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "react-markdown": "^5.0.3",
     "tailwindcss": "^2.0.3",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   }
 }
