--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   "dependencies": {
     "next": "^11.0.0",
     "next-seo": "^4.26.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
     "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.35.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.32",
-    "@types/react": "^17.0.3",
+    "@types/react": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "autoprefixer": "^10.3.1",
