--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "firebase": "^9.18.0",
     "next": "^13.1.6",
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
